@@ -1,0 +1,8 @@
+{
+  "data": {
+    "result": 214385.23,
+    "realLostYield": 214380,
+    "totalCompensation": 15800.19,
+    "comment": ""
+  }
+}
