@@ -53,3 +53,4 @@
 2024-11-05: Disallow users from changing the real yield loss values with the flat-rate, peak, and simplified peak yield-losses endpoints
 2024-11-18: Add uid property and deprecate the address property for all device models
 2024-12-09: Add considerPowerControl query parameter in simulation endpoint
+2025-03-12: Add simulation for yield-losses endpoint
